# talespin

./: LICENSE  README.md  package-lock.json  package.json  planning.md  svelte.config.js
dixit-server/: Cargo.toml
dixit-server/src/: main.rs  room.rs
src/: app.d.ts  app.postcss  gameServer.ts
src/lib/: gameServer.ts  store.ts  types.d.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/game/[roomCode]/: +page.svelte  ActiveChooses.svelte  End.svelte  Images.svelte  Joining.svelte  Leaderboard.svelte  PlayersChoose.svelte  Results.svelte  Voting.svelte
src/routes/game/[room_id]/: +page.svelte
src/routes/how-to-play/: +page.svelte
talespin-server/: Cargo.toml
talespin-server/src/: main.rs  room.rs
